<resources>
    <string name="app_name">Intrusive Revision</string>
    <string name="correct_text">Correct!</string>
    <string name="incorrect_text">Incorrect</string>
    <string name="switch_text">Session</string>
    <string name="global_text">Global</string>
    <string name="stats_text">| Stats |</string>
    <string name="question_text">Previous question</string>
    <string name="equals_text">=</string>
    <string name="zero_text">0</string>
    <string name="checkbox_text">Show questions based on past stats</string>
    <string name="close_text">close</string>
    <string name="global_settings_text">Global settings</string>

    <string name="settings1">Display</string>
    <string name="settings2">new question(s) every</string>
    <string name="settings3">minute(s), with a penalty of</string>
    <string name="settings4">question(s) for each incorrect answer</string>
    <string name="quizlet_text">Paste Quizlet link or export (see GitHub):</string>
    <string name="current_set_text">Current set:</string>
</resources>