<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/appCard"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/dark_grey"
    app:cardCornerRadius="16dp"
    app:cardElevation="0dp"
    app:strokeColor="@color/highlight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/appIcon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cross" />

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="TextView"
            android:textColor="@color/highlight"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/appChevron"
            app:layout_constraintStart_toEndOf="@+id/appIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/appChevron"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_arrow_drop_down_24"
            app:tint="@color/highlight" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/globalTextGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="NotSibling">

            <TextView
                android:id="@+id/displayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/settings1"
                android:textColor="@color/light_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/newQuestions"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:minEms="1"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:text="@string/zero_text" />

            <TextView
                android:id="@+id/questionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/settings2"
                android:textColor="@color/light_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/timeInterval"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:minEms="1"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:text="@string/zero_text" />

            <TextView
                android:id="@+id/penaltyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/settings3"
                android:textColor="@color/light_text"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/penaltyQuestions"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="4dp"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:minEms="1"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:text="@string/zero_text" />

            <TextView
                android:id="@+id/incorrectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/settings4"
                android:textColor="@color/light_text"
                android:textSize="18sp" />

        </com.google.android.material.chip.ChipGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>